# osd

./: CMakeLists.txt  README.md
examples/bar/: example_bar.cpp
include/bar/: bar.h
include/foo/: foo.h
src/bar/: bar.cpp
src/foo/: foo.cpp
tests/bar/: test_bar.cpp
tests/foo/: test_foo.cpp
tests/test/: test_main.cpp
